clusters/main/kubernetes/apps/radar-dashboard/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radar-dashboard
  labels:
    pod-security.kubernetes.io/enforce: privileged
